# CompilerWebApp

./: .gitignore  .gitmodules  CompilerConfig.yaml  README.md
compiler/:  -  .gitignore  Cargo.toml  CompilerConfig.yaml
compiler/src/: lib.rs  test.rs
compiler/src/compilers/: compiler.rs  cpp_compiler.rs  mod.rs  rust_compiler.rs
compiler/src/config/: common.rs  compiler.rs  mod.rs
compiler/src/data/: mod.rs
compiler/src/data/input_data/: compiler_type.rs  compilers_list.rs  header.rs  mod.rs  options.rs  source_code.rs
compiler/src/data/output_data/: mod.rs  result.rs
compiler/src/handler/: mod.rs
compiler/src/options/: mod.rs
compiler/src/storage/: mod.rs  name_generator.rs
compiler/temp/src/: test.cpp  test.rs  test2.cpp
config/: Cargo.toml
config/lib/: lib.rs
configurable/: Cargo.toml
configurable/lib/: configurable.rs  lib.rs
runner/: Cargo.toml  RunnerFilters.json  build.rs  config.yaml
runner/config/: filters.json
runner/lib/: lib.rs
runner/lib/config/: config_io.rs  config_struct.rs  derive_configurable.rs  mod.rs
runner/lib/data/: error.rs  output.rs
runner/lib/fd_divertion/: fd_divertion.rs  mod.rs
runner/lib/filter/: mod.rs
runner/lib/runner/: cpp_runner.rs  lib_wrapper.rs  mod.rs
runner/src/: main.rs
runner/test/: test.rs
runner/test/cpp/: casual_cpp.cpp  create_new_file.cpp  input_output.cpp  loop.cpp  makefile  remove_file.cpp  rewrite_file_content.cpp  runtime_error.cpp  simple_print.cpp
runner/test/data/: file_with_content.txt  new_file_created_with_so  no_such_preset.json  test_config.yaml
runner/test/lib/: simple
runner/test/rust/: makefile  printtext.rs
webapp/: BackendConfig.yaml  Cargo.toml  CompilerConfig.yaml  Gruntfile.js  Rocket.toml  config.yaml  package.json
webapp/src/: config_struct.rs  main.rs
webapp/src/filework/: mod.rs
webapp/src/http_handlers/: mod.rs  submit.rs
webapp/src/http_handlers/index/: get.rs  index_context.rs  mod.rs
webapp/src/http_handlers/sessions/: mod.rs  session.rs  sessions_tracker.rs
webapp/src/http_handlers/sessions/session/: uni_path.rs
webapp/src/http_handlers/submit/: mod.rs  post.rs  structs.rs
webapp/src/http_handlers/submit/admin/: admin_access_token.rs  admin_user.rs  config_value.rs  consts.rs  handle_get.rs  handle_post.rs  mod.rs  runner_config.rs
webapp/src/http_handlers/submit/structs/: runner_output.rs  submit_headers.rs  submit_input.rs  submit_output.rs
webapp/src/languages/: compiler_flag.rs  flags_parser.rs  flags_validation_tests.rs  flags_validator.rs  lang_info.rs  mod.rs
webapp/src/languages/flags_parser/: cpp.rs
webapp/src/languages/static_info/: cpp.rs  mod.rs
webapp/static/: admin_panel.html.tera  index.html  index.html.tera  index_admin.html.tera  options_list.html.tera
webapp/static/css/: editor.css  main.css
webapp/static/html/: index.html
webapp/static/js/: editor.js  submit_form.js
webapp/tests/: general_tests.js
