[package]
name = "compiler"
version = "0.1.0"


[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin/compiler_main.rs"

[dependencies]
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
figment = { version = "0.10.6", features = ["yaml", "test"] }



