[package]
name = "runner"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "runner"
path = "src/main.rs"

[lib]
name = "runner"
path = "lib/lib.rs"

[[test]]
name = "test"
path = "test/test.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pandora_box = "0.6.2"
sharedlib = "7.0.0"
libc = "0.2.1"
prctl = "1.0.0"
shh = "1.0.1"

[build-dependencies]
bindgen = "0.59.1"