[package]
name = "webapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "tls", "secrets"] }
serde = "1.0"
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] }
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
uuid = { version = "*", features = ["v4"] }
figment = { version = "0.10.6", features = ["yaml", "test"] }

[dependencies.compiler]
path = "../compiler"
